5-Application of multi-cloud, multi-cluster service mesh/bookinfo-apps/Cluster2 - k8s-dmz-onprem/review-istio-apps-dst_rule_v2_v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews.istio-apps.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
